<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainFragViewModel"
            type="com.example.todoapp.viewmodel.TodoItemViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.search.SearchBar
                    android:id="@+id/sbSearchBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search" />
            </com.google.android.material.appbar.AppBarLayout>
        </RelativeLayout>

        <com.google.android.material.search.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search"
            app:layout_anchor="@id/sbSearchBar">
            <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
        </com.google.android.material.search.SearchView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tloMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="140dp"
                android:contentDescription="@string/tab" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/tloMenu"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/btnClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-130dp"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/tloMenu"
                android:text="@string/clear_all"
                android:textColor="@color/white"
                android:textSize="40px"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:transitionName="add"
                app:srcCompat="@android:drawable/ic_input_add" />

        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>